Atualização de agradecimentos ao professor da disciplina

--- a/thelast.html
+++ b/thelast.html
@@ -172,6 +172,7 @@
             <input type="button" value="Calcular" onclick="media()" id="total">
             <p class="mostrar_resultado">Veja aqui sua média geral.</p>
         </div>
+        <div id="especial-cassio">Cássio, deixe seu mousse exatamente aqui em cima....</div>
 
         <footer>
             <img src="Images/logothelast.png" alt="Logo The Last of Us" class="imagem-footer">
